# remote-factory

./: .env.example  .factory  .factory.bak  .gitignore  404.html  AGENTS.md  BUILD-ROOT.md  CHANGELOG.md  CLAUDE.md  Containerfile  GRAPH-SPEC.md  LICENSE  README.md  SKILL.md  SPEC.md  SYNTAX.md  build-root-spec.md  build.sh  factory.md  index.html  install.sh  mkdocs.yml  pyproject.toml  qa-adversarial.feature  qa-code-review-checklist.md  qa-code-review.feature  qa-health-check.feature  results.jsonl  scores.jsonl  sitemap.xml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.factory/: config.json  eval_profile.json  events.jsonl  last_eval.json  results.tsv
.opencode/: opencode.db-shm  opencode.db-wal
.sentrux/: rules.toml
ace/: index.html
agents/: archivist.md  builder.md  ceo.md  distiller.md  evaluator.md  failure_analyst.md  researcher.md  reviewer.md  strategist.md
architecture/: index.html
benchmarks/: commit-full-eval.sh  config.sh  factory_harbor_agent.py  featurebench-extra-instructions.md  index.html  lib.sh  run-featurebench.sh  run-full-eval.sh  run-harbor.sh  run-legacybench.sh  run-programbench.sh  run-swebench.sh  run-terminalbench.sh  run.sh  terminalbench-extra-instructions.md
changelog/: index.html
codex-agents/: archivist.toml  builder.toml  ceo.toml  distiller.toml  evaluator.toml  failure_analyst.toml  researcher.toml  reviewer.toml  strategist.toml
codex-mcp/: index.html
coding-playbook/: index.html
config/: known-fixes.yaml
configuration/: index.html
contributing/: index.html
contributing-benchmarks/: index.html
diagrams/: dataflow-research.d2
docs/: abstractions.md  ace.md  agent-runner-abstraction.md  architecture.md  benchmarks.md  build-root-baseline-task.md  build-root-journey.md  build-root-methodology.md  build-root.md  coding-playbook.md  configuration.md  contributing-benchmarks.md  contributing.md  equivalence-testing.md  eval.md  full-eval.md  getting-started.md  harness-phase-plan.md  index.md  modes-and-pipelines.md  rfc-runner-abstraction.md  runner-abstraction.md  self-improvement.md  setup.md  workflow.html
eval/: index.html  score.py
factory/: __init__.py  __main__.py  adversarial.py  backfill_archive.py  baseline.py  ceo_completion.py  checkpoint.py  checkpoint_hook.py  clean_pr.py  cli.py  digest.py  events.py  forge.py  graph.py  handoff.py  insights.py  issue.py  mcp_server.py  messages.py  models.py  paths.py  precheck.py  profile.py  refactory.py  refine_state.py  registry.py  report.py  report_html.py  research_index.py  review.py  run_index.py  runs.py  sessions.py  skill_cache.py  spec_lock.py  ssh.py  state.py  store.py  strategy.py  study.py  (+4 more)
factory-tracing/: .env.example  .gitignore  pyproject.toml
factory-tracing/src/factory_tracing/: __init__.py  cli.py  config.py  executor.py  integration.py  propagation.py  provider.py  spans.py  verify.py
factory-tracing/tests/: conftest.py  test_executor.py  test_provider.py
full-eval/: index.html
getting-started/: index.html
runner-v2-spec/: index.html
scripts/: aggregate_status.py  analyze_trace.py  check-prerequisites.sh  demo_timeout_fragility.py  generate_containerfile.py  langfuse-setup  parse_compile.py  parse_compile_results.py  parse_deps.py  parse_gradle_deps.py  parse_test_reports.py  pull_langfuse_trace.py  sentrux-check.sh  sync_agents.py  test_claude_build.sh  test_claude_build_game.sh  test_codex_build.sh  test_codex_build_game.sh  test_factory_build.sh  verify_langfuse_trace.py
search/: search_index.json
(+668 files in other folders)
