[project]
name = "remote-factory"
version = "0.1.2"
description = "A harness for agentic software evolution — detect, delegate, evaluate, archive"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "mcp>=1.27.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/akashgit/remote-factory"
Repository = "https://github.com/akashgit/remote-factory"
Issues = "https://github.com/akashgit/remote-factory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["factory"]

[project.scripts]
factory = "factory.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
extend-exclude = ["mkdocs.yml"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.10", "pytest-cov>=5.0", "httpx>=0.27"]
docs = ["mkdocs-material>=9.5"]
