[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-tracing"
version = "0.1.0"
description = "Distributed tracing for the re:factory multi-agent software factory"
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "langfuse>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
factory-tracing = "factory_tracing.cli:_cli_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
