[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factory-tracing"
version = "0.1.0"
description = "OpenTelemetry tracing for Factory agent execution"
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "langfuse>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
factory-tracing = "factory_tracing.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/factory_tracing"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
